namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-justice-data-agent-staging/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-justice-data-agent-staging"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "public-justice-data-agent"
    cloud-platform.justice.gov.uk/application: "Justice data agent application"
    cloud-platform.justice.gov.uk/owner: "Justice Data Agent: justice-data-agent@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-justice-data-agent-worker"
    cloud-platform.justice.gov.uk/team-name: "hmpps-justice-data-agent-devs"
    cloud-platform.justice.gov.uk/review-after: ""
